--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delice Desserts</title>
-    <link rel="icon" href="/cheesecake.png" type="image/png">
+    <link rel="icon" href="cheesecake.png" type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;500;700&family=Poppins:wght@300;400;500;600&display=swap');
         
@@ -47,7 +47,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('/pexels-ivan-samkov-8101695.jpg') center/cover;
+            background: url('pexels-ivan-samkov-8101695.jpg') center/cover;
             opacity: 0.1;
             z-index: 1;
         }
@@ -750,7 +750,7 @@
 
             <div class="cheesecake-grid">
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-anna-guerrero-788383-4078187.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-anna-guerrero-788383-4078187.jpg');">
                         <div class="price-badge">₹124.99</div>
                     </div>
                     <div class="cheesecake-content">
@@ -764,7 +764,7 @@
                 </div>
 
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-cescrz-3185509.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-cescrz-3185509.jpg');">
                         <div class="price-badge">₹127.99</div>
                     </div>
                     <div class="cheesecake-content">
@@ -778,7 +778,7 @@
                 </div>
 
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-wendywei-3071870.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-wendywei-3071870.jpg');">
                         <div class="price-badge">₹129.99</div>
                     </div>
                     <div class="cheesecake-content">
@@ -792,7 +792,7 @@
                 </div>
 
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-anna-guerrero-788383-4078187.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-anna-guerrero-788383-4078187.jpg');">
                         <div class="price-badge">₹126.99</div>
                     </div>
                     <div class="cheesecake-content">
@@ -806,7 +806,7 @@
                 </div>
 
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-cescrz-3185509.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-cescrz-3185509.jpg');">
                         <div class="price-badge">₹131.99</div>
                     </div>
                     <div class="cheesecake-content">
@@ -820,7 +820,7 @@
                 </div>
 
                 <div class="cheesecake-item">
-                    <div class="cheesecake-image" style="background-image: url('/pexels-wendywei-3071870.jpg');">
+                    <div class="cheesecake-image" style="background-image: url('pexels-wendywei-3071870.jpg');">
                         <div class="price-badge">₹128.99</div>
                     </div>
                     <div class="cheesecake-content">
